Edited README via GitHub

--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 this is my first play with Node.js, spine. 
-I deployed it using [https://github.com/maccman/spine.app](spine.app) and added the existing [https://github.com/maccman/spine.todos](spine.todos) application.
+I deployed it using spine.app[spine.app](https://github.com/maccman/spine.app) and added the existing spine.todos[spine.todos](https://github.com/maccman/spine.todos) application.
